# sarasvati

./: .gitignore  .travis.yml  README.md  config.yml  pyproject.toml  tools.py
.github/: FUNDING.yml
sarasvati/: __init__.py  app.py  config_handlers.py
sarasvati/api/: __init__.py  api.py  sarasvati.py
sarasvati/brain/: __init__.py  brain.py  cache.py  components.py  event.py  manager.py  models.py  serialization.py
sarasvati/brain/components/: __init__.py  info.py  manager.py  provider.py
sarasvati/brain/storage/: __init__.py  cache.py  storage.py
sarasvati/commands/: __init__.py  command.py  result.py
sarasvati/config/: __init__.py  manager.py
sarasvati/core/: repository.py
sarasvati/core/plugins/: __init__.py  exception.py  fetcher.py  meta.py  repository.py
sarasvati/core/repository/: __init__.py  fetcher.py  meta.py  repository.py
sarasvati/plugins/: __init__.py  interfaces.py  manager.py
sarasvati/storage/: __init__.py  helpers.py  serialization.py  storage.py
tests/: test_sarasvati.py
tests/integration/: conftest.py  test_brain_commands.py  test_essential_components.py
